<resources>
    <string name="app_name">HRM</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">LogOut</string>
    <string name="logout_from_here">You can logout from here</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="btn_sign_up">Login</string>
    <string name="err_msg_name">Enter your username</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="remember_me">Remember Me</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="public_message">Public Message From Admin</string>

    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="working_days">Working Days</string>
    <string name="leave_type">Leave Type</string>
    <string name="reason">Reason</string>
    <string name="enter_reason">Enter reason for leaves.</string>
    <string name="leave_balance">Leaves Balance</string>
    <string name="paid_leave_balance">Paid Leaves Balance:</string>
    <string name="pending_paid_leaves">Pending Paid Leaves:</string>
    <string name="default_text">00-00-0000</string>


    <string name="nav_item_home">Home</string>
    <string name="nav_item_apply_for_leave">Apply For a Leave</string>
    <string name="nav_item_my_leaves">My Leaves</string>
    <string name="nav_item_project_feedback">Project/Feedback</string>
    <string name="nav_item_e_o_t_m">E.O.T.M</string>
    <string name="nav_item_salary_slips">Salary Slips</string>
    <string name="nav_item_send_message">Send a Message</string>
    <string name="nav_item_warning">Warnings</string>
    <string name="nav_item_refer_friend">Refer a Friend</string>
    <string name="nav_item_exit_interview">Exit Interview</string>
    <string name="nav_item_exit_sales">Sales</string>
    <string name="nav_item_exit_Conversions">Conversions</string>
    <string name="nav_item_exit_managed">Managed</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>

    <string name="date">Date</string>
    <string name="days">Days</string>
    <string name="status">Status</string>
    <string name="action">Action</string>

    <string name="full_day">Full day</string>
    <string name="half_day">Half day</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>

    <string name="full_day_duration">full_day</string>
    <string name="half_day_duration">half_day</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>

    <string name="paid_status">1</string>
    <string name="unpaid_status">2</string>
    <string name="paid_unpaid_status">3</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_apply_for_leave</item>
        <item>@string/nav_item_my_leaves</item>

        <!--<item>@string/nav_item_project_feedback</item>-->
        <!--<item>@string/nav_item_e_o_t_m</item>-->
        <!--<item>@string/nav_item_salary_slips</item>-->
        <!--<item>@string/nav_item_send_message</item>-->
        <!--<item>@string/nav_item_warning</item>-->
        <!--<item>@string/nav_item_refer_friend</item>-->
        <!--<item>@string/nav_item_exit_interview</item>-->
        <!--<item>@string/nav_item_exit_sales</item>-->
        <!--<item>@string/nav_item_exit_Conversions</item>-->
        <!--<item>@string/nav_item_exit_managed</item>-->

    </string-array>

    <integer-array name="img_icon_arr">
        <item>@drawable/home_icon</item>
        <item>@drawable/apply_for_leave</item>
        <item>@drawable/my_leave_icon</item>
    </integer-array>

    <string name="please_select_leave_type">Please select leave type</string>
    <string name="paid_leave">Paid Leave</string>
    <string name="unpaid_leave">Unpaid Leave</string>
    <string name="paid_unpaid_leave">Paid+Unpaid Leave</string>
    <string name="duration_type">Duration Type</string>


    <string-array name="leave_types_array">
        <item>@string/please_select_leave_type</item>
        <item>@string/paid_leave</item>
        <item>@string/unpaid_leave</item>
        <item>@string/paid_unpaid_leave</item>
    </string-array>

    <string-array name="duration_types_array">
        <item>@string/full_day</item>
        <item>@string/half_day</item>
    </string-array>

    <string-array name="duration_types_array_second">
        <item>@string/morning</item>
        <item>@string/afternoon</item>
    </string-array>

    <string name="valid_date">Please Select Valid Date</string>
    <string name="mobile">Mobile</string>
    <string name="btn_submit">Submit</string>
    <string name="enter_text">Enter your mobile number to get started!</string>
    <string name="confirm_number">Confirm Number</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="correct_no_msg">Please enter correct number</string>
    <string name="correct">correct? This is what we will use to verify your account.</string>
    <string name="is_no">Is the number</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="otp_is">Generated OTP!</string>
    <string name="wrong_otp">Wrong OTP</string>
    <string name="to">TO</string>
    <string name="off_saturday">This is your off saturday so please select valid date.</string>
    <string name="leave_request">Leave request is before seven days notice so it will be counted as unpaid, click submit if you want to proceed.</string>
    <string name="unpaid_leaves">Unpaid Leaves:</string>
    <string name="paid_leaves">Paid Leaves:</string>
    <string name="default_zero_single">0</string>
    <string name="default_zero">.00</string>
    <string name="default_zero_five">0.5</string>
    <string name="default_one">1.00</string>
    <string name="select_date_from">The Date from field is required.</string>
    <string name="select_date_to">The Date to field is required.</string>
    <string name="select_leave_type">Please select any leave type.</string>
    <string name="select_reason">The reason field is required.</string>
    <string name="total_paid_leave">Total Paid Leave Balance:</string>
    <string name="cancel">Cancel</string>
    <string name="dont">don\'t</string>
    <string name="agree">Agree</string>
    <string name="close">Close</string>
    <string name="sure">Are you sure you want to delete this leave?</string>
    <string name="ok">OK</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="left_company">You are left our organisation so you have to uninstall the app. Best of luck for your future.</string>
</resources>
