<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="3">


        <TextView
            android:id="@+id/tv_leave_type_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/leave_type"
            android:textColor="@android:color/white"
            android:textSize="12sp" />


        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/tv_date_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:visibility="visible" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:gravity="center"
            android:text="@string/days"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:visibility="gone" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:visibility="gone" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:visibility="gone" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:visibility="gone" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/reason"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:visibility="gone" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@android:color/white" />


        <TextView
            android:id="@+id/tv_action_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/action"
            android:textColor="@android:color/white"
            android:textSize="12sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_my_leaves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:scrollbars="none" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>


</LinearLayout>
