<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_number"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/confirm_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="normal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="22dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2">

        <com.andexert.library.RippleView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_centered="true"
            app:rv_rippleDuration="200"
            app:rv_zoomDuration="200">

            <Button
                android:id="@+id/dialog_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:text="@string/no" />
        </com.andexert.library.RippleView>


        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <com.andexert.library.RippleView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:rv_centered="true"
            app:rv_rippleDuration="200"
            app:rv_zoomDuration="200">


            <Button
                android:id="@+id/dialog_yes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@null"
                android:text="@string/yes" />

        </com.andexert.library.RippleView>
    </LinearLayout>

</LinearLayout>